syntax = "proto3";

option java_multiple_files = true;
option java_package = "app.ride.WalletServoceProto";
option java_outer_classname = "WalletServoceProto";
option objc_class_prefix = "WS"; 

import "google/protobuf/field_mask.proto";

package app.ride.walletService;

service WalletService {
  // Account related methods
  rpc createAccount(createAccountRequest) returns (Account) {}
  rpc getAccount(getAccountRequest) returns (Account) {}
  rpc getAccountByUid(getAccountByUidRequest) returns (Account) {}

  // Transaction related methods
  rpc addTransactions(addTransactionsRequest) returns (addTransactionsResponse) {}
  rpc getTransaction(getTransactionRequest) returns (Transaction) {}
  rpc getTransactionsByBatchId(getTransactionsByBatchIdRequest) returns (getTransactionsByBatchIdResponse) {}
  rpc listTransactionsForAccount(listTransactionRequest) returns (listTransactionResponse) {}
}

message createAccountRequest {
  string uid = 1;
}

message getAccountRequest {
  string accountId = 1;
  optional google.protobuf.FieldMask field_mask = 99;
}

message getAccountByUidRequest {
  string uid = 1;
  optional google.protobuf.FieldMask field_mask = 99;
}

message Account {
  string accountId = 1;
  string uid = 2;
  int64 balance = 3;
  string createdAt = 7;
  string updatedAt = 8;
}

message addTransactionsRequest {
  repeated Entry transactions = 2;

  message Entry {
    string accountId = 2;
    int64 amount = 3;
    TransactionType type = 4;
  }
}

message addTransactionsResponse {
  string batchId = 1;
  repeated string transactionIds = 2;
}

message getTransactionRequest {
  string transactionId = 1;
  optional google.protobuf.FieldMask field_mask = 99;
}

message getTransactionsByBatchIdRequest {
  string batchId = 1;
  optional google.protobuf.FieldMask field_mask = 99;
}

message getTransactionsByBatchIdResponse {
  repeated Transaction transactions = 1;
}

message listTransactionRequest {
  string accountId = 1;
  optional google.protobuf.FieldMask field_mask = 99;
}

message listTransactionResponse {
  repeated Transaction transactions = 1;
}

enum TransactionType {
  DEBIT = 0;
  CREDIT = 1;
};

message Transaction {
  string transactionId = 1;
  string accountId = 2;
  int64 amount = 3;
  TransactionType type = 4;
  string timestamp = 5;
  string batchId = 6;
}